Mise en place du Wiki Ajout des commentaires & optimisation des imports